# swig_test

./: CMakeLists.txt  README.md
cmake/: ConfigurePython.cmake  MyConfigure.cmake
include/: numpy_data.h
main/: main.cpp
python/: generate_run.sh  python_api.i  python_api.py  setup.py
python/cmake_generated/: headers.h  inc_dirs.txt  incs_for_wrap.i  libs.txt  srcs.txt
python/outfile_dir/: python_apiPYTHON_wrap.cxx
python_test/: test1.py
src/: numpy_data.cpp
